CogniCrypt++/CrySL/lib/Parser/CrySLParser.cpp

// Generated from .\CrySL.g4 by ANTLR 4.7.2



#include "CrySLParser.h"


using namespace antlrcpp;
using namespace antlr4;

CrySLParser::CrySLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

CrySLParser::~CrySLParser() {
  delete _interpreter;
}

std::string CrySLParser::getGrammarFileName() const {
  return "CrySL.g4";
}

const std::vector<std::string>& CrySLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& CrySLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- DomainModelContext ------------------------------------------------------------------

CrySLParser::DomainModelContext::DomainModelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CrySLParser::SpecContext* CrySLParser::DomainModelContext::spec() {
  return getRuleContext<CrySLParser::SpecContext>(0);
}

CrySLParser::ObjectsContext* CrySLParser::DomainModelContext::objects() {
  return getRuleContext<CrySLParser::ObjectsContext>(0);
}

CrySLParser::EventsContext* CrySLParser::DomainModelContext::events() {
  return getRuleContext<CrySLParser::EventsContext>(0);
}

CrySLParser::OrderContext* CrySLParser::DomainModelContext::order() {
  return getRuleContext<CrySLParser::OrderContext>(0);
}

tree::TerminalNode* CrySLParser::DomainModelContext::EOF() {
  return getToken(CrySLParser::EOF, 0);
}

CrySLParser::ForbiddenContext* CrySLParser::DomainModelContext::forbidden() {
  return getRuleContext<CrySLParser::ForbiddenContext>(0);
}

CrySLParser::ConstraintsContext* CrySLParser::DomainModelContext::constraints() {
  return getRuleContext<CrySLParser::ConstraintsContext>(0);
}

CrySLParser::RequiresBlockContext* CrySLParser::DomainModelContext::requiresBlock() {
  return getRuleContext<CrySLParser::RequiresBlockContext>(0);
}

CrySLParser::EnsuresContext* CrySLParser::DomainModelContext::ensures() {
  return getRuleContext<CrySLParser::EnsuresContext>(0);
}

CrySLParser::NegatesContext* CrySLParser::DomainModelContext::negates() {
  return getRuleContext<CrySLParser::NegatesContext>(0);
}


size_t CrySLParser::DomainModelContext::getRuleIndex() const {
  return CrySLParser::RuleDomainModel;
}


CrySLParser::DomainModelContext* CrySLParser::domainModel() {
  DomainModelContext *_localctx = _tracker.createInstance<DomainModelContext>(_ctx, getState());
  enterRule(_localctx, 0, CrySLParser::RuleDomainModel);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    spec();
    setState(87);
    objects();
    setState(89);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CrySLParser::T__62) {
      setState(88);
      forbidden();
    }
    setState(91);
    events();
    setState(92);
    order();
    setState(94);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CrySLParser::T__34) {
      setState(93);
      constraints();
    }
    setState(97);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CrySLParser::T__17) {
      setState(96);
      requiresBlock();
    }
    setState(100);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CrySLParser::T__32) {
      setState(99);
      ensures();
    }
    setState(103);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CrySLParser::T__61) {
      setState(102);
      negates();
    }
    setState(105);
    match(CrySLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SpecContext ------------------------------------------------------------------

CrySLParser::SpecContext::SpecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CrySLParser::QualifiedNameContext* CrySLParser::SpecContext::qualifiedName() {
  return getRuleContext<CrySLParser::QualifiedNameContext>(0);
}


size_t CrySLParser::SpecContext::getRuleIndex() const {
  return CrySLParser::RuleSpec;
}


CrySLParser::SpecContext* CrySLParser::spec() {
  SpecContext *_localctx = _tracker.createInstance<SpecContext>(_ctx, getState());
  enterRule(_localctx, 2, CrySLParser::RuleSpec);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(CrySLParser::T__0);
    setState(108);
    qualifiedName();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QualifiedNameContext ------------------------------------------------------------------

CrySLParser::QualifiedNameContext::QualifiedNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> CrySLParser::QualifiedNameContext::Ident() {
  return getTokens(CrySLParser::Ident);
}

tree::TerminalNode* CrySLParser::QualifiedNameContext::Ident(size_t i) {
  return getToken(CrySLParser::Ident, i);
}


size_t CrySLParser::QualifiedNameContext::getRuleIndex() const {
  return CrySLParser::RuleQualifiedName;
}


CrySLParser::QualifiedNameContext* CrySLParser::qualifiedName() {
  QualifiedNameContext *_localctx = _tracker.createInstance<QualifiedNameContext>(_ctx, getState());
  enterRule(_localctx, 4, CrySLParser::RuleQualifiedName);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    match(CrySLParser::Ident);
    setState(115);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CrySLParser::T__1) {
      setState(111);
      match(CrySLParser::T__1);
      setState(112);
      match(CrySLParser::Ident);
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ObjectsContext ------------------------------------------------------------------

CrySLParser::ObjectsContext::ObjectsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CrySLParser::ObjectDeclContext *> CrySLParser::ObjectsContext::objectDecl() {
  return getRuleContexts<CrySLParser::ObjectDeclContext>();
}

CrySLParser::ObjectDeclContext* CrySLParser::ObjectsContext::objectDecl(size_t i) {
  return getRuleContext<CrySLParser::ObjectDeclContext>(i);
}


size_t CrySLParser::ObjectsContext::getRuleIndex() const {
  return CrySLParser::RuleObjects;
}


CrySLParser::ObjectsContext* CrySLParser::objects() {
  ObjectsContext *_localctx = _tracker.createInstance<ObjectsContext>(_ctx, getState());
  enterRule(_localctx, 6, CrySLParser::RuleObjects);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(118);
    match(CrySLParser::T__2);
    setState(122);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << CrySLParser::T__3)
      | (1ULL << CrySLParser::T__5)
      | (1ULL << CrySLParser::T__6)
      | (1ULL << CrySLParser::T__7)
      | (1ULL << CrySLParser::T__8)
      | (1ULL << CrySLParser::T__9)
      | (1ULL << CrySLParser::T__10)
      | (1ULL << CrySLParser::T__11)
      | (1ULL << CrySLParser::T__12)
      | (1ULL << CrySLParser::T__13))) != 0) || _la == CrySLParser::Ident) {
      setState(119);
      objectDecl();
      setState(124);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ObjectDeclContext ------------------------------------------------------------------

CrySLParser::ObjectDeclContext::ObjectDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CrySLParser::TypeNameContext* CrySLParser::ObjectDeclContext::typeName() {
  return getRuleContext<CrySLParser::TypeNameContext>(0);
}

tree::TerminalNode* CrySLParser::ObjectDeclContext::Ident() {
  return getToken(CrySLParser::Ident, 0);
}

std::vector<CrySLParser::ArrayContext *> CrySLParser::ObjectDeclContext::array() {
  return getRuleContexts<CrySLParser::ArrayContext>();
}

CrySLParser::ArrayContext* CrySLParser::ObjectDeclContext::array(size_t i) {
  return getRuleContext<CrySLParser::ArrayContext>(i);
}


size_t CrySLParser::ObjectDeclContext::getRuleIndex() const {
  return CrySLParser::RuleObjectDecl;
}


CrySLParser::ObjectDeclContext* CrySLParser::objectDecl() {
  ObjectDeclContext *_localctx = _tracker.createInstance<ObjectDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, CrySLParser::RuleObjectDecl);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(126);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == CrySLParser::T__3) {
      setState(125);
      dynamic_cast<ObjectDeclContext *>(_localctx)->constModifier = match(CrySLParser::T__3);
    }
    setState(128);
    typeName();
    setState(129);
    match(CrySLParser::Ident);
    setState(133);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CrySLParser::T__15) {
      setState(130);
      array();
      setState(135);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(136);
    match(CrySLParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrimitiveTypeNameContext ------------------------------------------------------------------

CrySLParser::PrimitiveTypeNameContext::PrimitiveTypeNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CrySLParser::PrimitiveTypeNameContext::getRuleIndex() const {
  return CrySLParser::RulePrimitiveTypeName;
}


CrySLParser::PrimitiveTypeNameContext* CrySLParser::primitiveTypeName() {
  PrimitiveTypeNameContext *_localctx = _tracker.createInstance<PrimitiveTypeNameContext>(_ctx, getState());
  enterRule(_localctx, 10, CrySLParser::RulePrimitiveTypeName);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(156);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(138);
      dynamic_cast<PrimitiveTypeNameContext *>(_localctx)->booleanType = match(CrySLParser::T__5);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(140);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == CrySLParser::T__6) {
        setState(139);
        dynamic_cast<PrimitiveTypeNameContext *>(_localctx)->unsignedInt = match(CrySLParser::T__6);
      }
      setState(148);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
      case 1: {
        setState(142);
        dynamic_cast<PrimitiveTypeNameContext *>(_localctx)->charTy = match(CrySLParser::T__7);
        break;
      }

      case 2: {
        setState(143);
        dynamic_cast<PrimitiveTypeNameContext *>(_localctx)->shortTy = match(CrySLParser::T__8);
        break;
      }

      case 3: {
        setState(144);
        dynamic_cast<PrimitiveTypeNameContext *>(_localctx)->intTy = match(CrySLParser::T__9);
        break;
      }

      case 4: {
        setState(145);
        dynamic_cast<PrimitiveTypeNameContext *>(_localctx)->longTy = match(CrySLParser::T__10);
        break;
      }

      case 5: {
        setState(146);
        dynamic_cast<PrimitiveTypeNameContext *>(_localctx)->longlongTy = match(CrySLParser::T__10);
        setState(147);
        match(CrySLParser::T__10);
        break;
      }

      }
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(150);
      dynamic_cast<PrimitiveTypeNameContext *>(_localctx)->floatingPoint = match(CrySLParser::T__11);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(152);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == CrySLParser::T__10) {
        setState(151);
        dynamic_cast<PrimitiveTypeNameContext *>(_localctx)->longDouble = match(CrySLParser::T__10);
      }
      setState(154);
      dynamic_cast<PrimitiveTypeNameContext *>(_localctx)->doubleFloat = match(CrySLParser::T__12);
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(155);
      dynamic_cast<PrimitiveTypeNameContext *>(_localctx)->sizeType = match(CrySLParser::T__13);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeNameContext ------------------------------------------------------------------

CrySLParser::TypeNameContext::TypeNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CrySLParser::QualifiedNameContext* CrySLParser::TypeNameContext::qualifiedName() {
  return getRuleContext<CrySLParser::QualifiedNameContext>(0);
}

CrySLParser::PrimitiveTypeNameContext* CrySLParser::TypeNameContext::primitiveTypeName() {
  return getRuleContext<CrySLParser::PrimitiveTypeNameContext>(0);
}

std::vector<CrySLParser::PtrContext *> CrySLParser::TypeNameContext::ptr() {
  return getRuleContexts<CrySLParser::PtrContext>();
}

CrySLParser::PtrContext* CrySLParser::TypeNameContext::ptr(size_t i) {
  return getRuleContext<CrySLParser::PtrContext>(i);
}


size_t CrySLParser::TypeNameContext::getRuleIndex() const {
  return CrySLParser::RuleTypeName;
}


CrySLParser::TypeNameContext* CrySLParser::typeName() {
  TypeNameContext *_localctx = _tracker.createInstance<TypeNameContext>(_ctx, getState());
  enterRule(_localctx, 12, CrySLParser::RuleTypeName);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(160);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case CrySLParser::Ident: {
        setState(158);
        qualifiedName();
        break;
      }

      case CrySLParser::T__5:
      case CrySLParser::T__6:
      case CrySLParser::T__7:
      case CrySLParser::T__8:
      case CrySLParser::T__9:
      case CrySLParser::T__10:
      case CrySLParser::T__11:
      case CrySLParser::T__12:
      case CrySLParser::T__13: {
        setState(159);
        primitiveTypeName();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(165);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == CrySLParser::T__14) {
      setState(162);
      dynamic_cast<TypeNameContext *>(_localctx)->pointer = ptr();
      setState(167);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PtrContext ------------------------------------------------------------------

CrySLParser::PtrContext::PtrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t CrySLParser::PtrContext::getRuleIndex() const {
  return CrySLParser::RulePtr;
}


CrySLParser::PtrContext* CrySLParser::ptr() {
  PtrContext *_localctx = _tracker.createInstance<PtrContext>(_ctx, getState());
  enterRule(_localctx, 14, CrySLParser::RulePtr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(168);
    match(CrySLParser::T__14);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrayContext ------------------------------------------------------------------

CrySLParser::ArrayContext::ArrayContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CrySLParser::ArrayContext::Int() {
  return getToken(CrySLParser::Int, 0);
}


size_t CrySLParser::ArrayContext::getRuleIndex() const {
  return CrySLParser::RuleArray;
}


CrySLParser::ArrayContext* CrySLParser::array() {
  ArrayContext *_localctx = _tracker.createInstance<ArrayContext>(_ctx, getState());
  enterRule(_localctx, 16, CrySLParser::RuleArray);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(170);
    match(CrySLParser::T__15);
    setState(171);
    match(CrySLParser::Int);
    setState(172);
    match(CrySLParser::T__16);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RequiresBlockContext ------------------------------------------------------------------

CrySLParser::RequiresBlockContext::RequiresBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CrySLParser::ReqPredContext *> CrySLParser::RequiresBlockContext::reqPred() {
  return getRuleContexts<CrySLParser::ReqPredContext>();
}

CrySLParser::ReqPredContext* CrySLParser::RequiresBlockContext::reqPred(size_t i) {
  return getRuleContext<CrySLParser::ReqPredContext>(i);
}


size_t CrySLParser::RequiresBlockContext::getRuleIndex() const {
  return CrySLParser::RuleRequiresBlock;
}


CrySLParser::RequiresBlockContext* CrySLParser::requiresBlock() {
  RequiresBlockContext *_localctx = _tracker.createInstance<RequiresBlockContext>(_ctx, getState());
  enterRule(_localctx, 18, CrySLParser::RuleRequiresBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(174);
    match(CrySLParser::T__17);
    setState(180);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(175);
        reqPred(0);
        setState(176);
        match(CrySLParser::T__4); 
      }
      setState(182);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReqPredContext ------------------------------------------------------------------

CrySLParser::ReqPredContext::ReqPredContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CrySLParser::ReqPredLitContext* CrySLParser::ReqPredContext::reqPredLit() {
  return getRuleContext<CrySLParser::ReqPredLitContext>(0);
}

CrySLParser::ConstrContext* CrySLParser::ReqPredContext::constr() {
  return getRuleContext<CrySLParser::ConstrContext>(0);
}

std::vector<CrySLParser::ReqPredContext *> CrySLParser::ReqPredContext::reqPred() {
  return getRuleContexts<CrySLParser::ReqPredContext>();
}

CrySLParser::ReqPredContext* CrySLParser::ReqPredContext::reqPred(size_t i) {
  return getRuleContext<CrySLParser::ReqPredContext>(i);
}


size_t CrySLParser::ReqPredContext::getRuleIndex() const {
  return CrySLParser::RuleReqPred;
}



CrySLParser::ReqPredContext* CrySLParser::reqPred() {
   return reqPred(0);
}

CrySLParser::ReqPredContext* CrySLParser::reqPred(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  CrySLParser::ReqPredContext *_localctx = _tracker.createInstance<ReqPredContext>(_ctx, parentState);
  CrySLParser::ReqPredContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 20;
  enterRecursionRule(_localctx, 20, CrySLParser::RuleReqPred, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(192);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 17, _ctx)) {
    case 1: {
      setState(185);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == CrySLParser::T__18) {
        setState(184);
        dynamic_cast<ReqPredContext *>(_localctx)->neg = match(CrySLParser::T__18);
      }
      setState(187);
      reqPredLit();
      break;
    }

    case 2: {
      setState(188);
      constr(0);
      setState(189);
      dynamic_cast<ReqPredContext *>(_localctx)->implication = match(CrySLParser::T__21);
      setState(190);
      reqPred(1);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(202);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 19, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(200);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 18, _ctx)) {
        case 1: {
          _localctx = _tracker.createInstance<ReqPredContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleReqPred);
          setState(194);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(195);
          dynamic_cast<ReqPredContext *>(_localctx)->seq = match(CrySLParser::T__19);
          setState(196);
          reqPred(4);
          break;
        }

        case 2: {
          _localctx = _tracker.createInstance<ReqPredContext>(parentContext, parentState);
          pushNewRecursionContext(_localctx, startState, RuleReqPred);
          setState(197);

          if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
          setState(198);
          dynamic_cast<ReqPredContext *>(_localctx)->alt = match(CrySLParser::T__20);
          setState(199);
          reqPred(3);
          break;
        }

        } 
      }
      setState(204);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 19, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ReqPredLitContext ------------------------------------------------------------------

CrySLParser::ReqPredLitContext::ReqPredLitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CrySLParser::PredContext* CrySLParser::ReqPredLitContext::pred() {
  return getRuleContext<CrySLParser::PredContext>(0);
}


size_t CrySLParser::ReqPredLitContext::getRuleIndex() const {
  return CrySLParser::RuleReqPredLit;
}


CrySLParser::ReqPredLitContext* CrySLParser::reqPredLit() {
  ReqPredLitContext *_localctx = _tracker.createInstance<ReqPredLitContext>(_ctx, getState());
  enterRule(_localctx, 22, CrySLParser::RuleReqPredLit);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(205);
    pred();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PredContext ------------------------------------------------------------------

CrySLParser::PredContext::PredContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CrySLParser::PredContext::Ident() {
  return getToken(CrySLParser::Ident, 0);
}

CrySLParser::SuParListContext* CrySLParser::PredContext::suParList() {
  return getRuleContext<CrySLParser::SuParListContext>(0);
}


size_t CrySLParser::PredContext::getRuleIndex() const {
  return CrySLParser::RulePred;
}


CrySLParser::PredContext* CrySLParser::pred() {
  PredContext *_localctx = _tracker.createInstance<PredContext>(_ctx, getState());
  enterRule(_localctx, 24, CrySLParser::RulePred);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(207);
    dynamic_cast<PredContext *>(_localctx)->name = match(CrySLParser::Ident);
    setState(208);
    match(CrySLParser::T__15);
    setState(210);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (((((_la - 15) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 15)) & ((1ULL << (CrySLParser::T__14 - 15))
      | (1ULL << (CrySLParser::T__22 - 15))
      | (1ULL << (CrySLParser::T__23 - 15))
      | (1ULL << (CrySLParser::T__27 - 15))
      | (1ULL << (CrySLParser::T__28 - 15))
      | (1ULL << (CrySLParser::T__29 - 15))
      | (1ULL << (CrySLParser::T__30 - 15))
      | (1ULL << (CrySLParser::T__31 - 15))
      | (1ULL << (CrySLParser::Int - 15))
      | (1ULL << (CrySLParser::Bool - 15))
      | (1ULL << (CrySLParser::String - 15))
      | (1ULL << (CrySLParser::Ident - 15)))) != 0)) {
      setState(209);
      dynamic_cast<PredContext *>(_localctx)->paramList = suParList();
    }
    setState(212);
    match(CrySLParser::T__16);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SuParListContext ------------------------------------------------------------------

CrySLParser::SuParListContext::SuParListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CrySLParser::SuParContext *> CrySLParser::SuParListContext::suPar() {
  return getRuleContexts<CrySLParser::SuParContext>();
}

CrySLParser::SuParContext* CrySLParser::SuParListContext::suPar(size_t i) {
  return getRuleContext<CrySLParser::SuParContext>(i);
}


size_t CrySLParser::SuParListContext::getRuleIndex() const {
  return CrySLParser::RuleSuParList;
}


CrySLParser::SuParListContext* CrySLParser::suParList() {
  SuParListContext *_localctx = _tracker.createInstance<SuParListContext>(_ctx, getState());
  enterRule(_localctx, 26, CrySLParser::RuleSuParList);
  size_t _la = 0;
